<resources>
    <string name="app_name">nexaas challenge</string>
    <string name="action_settings">Settings</string>
    <string name="repository_name">Repository name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent finibus a ex vel tempus. Nullam ultricies sit amet dui id bibendum. Mauris accumsan et velit quis cursus. Etiam vitae metus non nibh rhoncus laoreet eu eu magna. Ut pulvinar ex urna, quis efficitur felis accumsan nec.</string>
    <string name="username">username</string>
    <string name="name_surname">Name Surname</string>
    <string name="mock_number_3x">999</string>
    <string name="mock_number_2x">99</string>
    <string name="loading_msg">Your connection seems to be slow right now, so calm down, take a drink, it may take a while, we\'re loading your content as fast as we can.</string>
</resources>
