<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="0dp"
    android:layout_marginEnd="2dp"
    android:layout_marginStart="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginLeft="2dp"
    app:elevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/repository_name"
            android:layout_width="230dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/repository_name"/>

        <TextView
            android:id="@+id/repository_description"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/lorem_ipsum"
            android:layout_below="@+id/repository_name"/>

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/user_image"/>

            <TextView
                android:id="@+id/name_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/name_surname"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/username"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/repository_description"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/forks_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_number_3x"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/starred_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_number_2x"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/grey300"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

</android.support.v7.widget.CardView>